--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
         <div id="intro" >
             <p>
-                nowadays the LGJ has the highest rates of success in baccalaureate with 95% of the students having a bachelor's degree, while it has the lowest rate of failure among all other subjects. the LGJ has a good reputation in the region of Sfax.
+                nowadays the LSG has the highest rates of success in baccalaureate with 95% of the students having a bachelor's degree, while it has the lowest rate of failure among all other subjects. the LSG has a good reputation in the region of Sfax.
                 Its main purpose is to educate young people about the importance of education and how it can be beneficial for society's development in the future. It is an important part of the community that helps in developing their self- esteem and confidence.
             </p>
         </div>
