--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             width: 100%;
             /* height: 500px; */
 
-            background-image: url("lsg3.png");
+            background-image: url("lsg3.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -346,12 +346,12 @@
         <div id="imgs" >
             <div>
                 <img class="item" src="lsg_gate.png" />
-                <img class="item" src="lsg2.png" />
+                <img class="item" src="lsg2.jpg" />
                 <!-- <img class="item" src="bg1.png" /> -->
             </div>
             <div>
-                <img class="item" src="lsg3.png" />
-                <img class="item" src="lsg1.png" />
+                <img class="item" src="lsg3.jpg" />
+                <img class="item" src="lsg1.jpg" />
                 <!-- <img class="item" src="bg1.png" /> -->
             </div>
         </div>
