--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
         <div id="form" >
             <p>if you want to receive everything new about LSG just fill in the form </p>
-            <a href="http://lsgremda.eb2a.com" target="_blank" >click here</a>
+            <a href="http://lsgremda.eb2a.com/form.php" target="_blank" >click here</a>
         </div>
         <div style="background-color: black; padding: 20px; margin-top: 40px;" >
             <h1 style="text-align:center; color: rgb(227, 218, 218); font-size: 2em; font-weight: 600;" >some pictures of LSG</h1>
