--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </p>
         </div>
         <div id="form" >
-            <p>if you want to receive everything new about LSG just fill in the form </p>
+            <p>if you want to receive everything new about LSG just fill out the form </p>
             <a href="http://lsgremda.eb2a.com/form.php" target="_blank" >click here</a>
         </div>
         <div style="background-color: black; padding: 20px; margin-top: 40px;" >
@@ -721,5 +721,7 @@ nowadays the LGJ has the highest rates of success in baccalaureate with 95% of t
 Its main purpose is to educate young people about the importance of education and how it can be beneficial for society's development in the future. It is an important part of the community that helps in developing their self- esteem and confidence.
 
 -->
+    
+    <!-- VISA Tracking Code for https://lsg-two.vercel.app/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','3d89f9ae-9b18-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://lsg-two.vercel.app/ -->
 </body>
 </html>
